<resources>
    <string name="app_name">lab2</string>
    <string name="title">TITLE</string>
    <string name="director">DIRECTOR</string>
    <string name="id">ID</string>
    <string name="dummy_data">DUMMY</string>
    <string name="description">DESCRIPTION</string>
    <string name="actors">ACTORS</string>
    <string name="actor">ACTOR</string>
    <string name="save">SAVE</string>
    <string name="movie_list_fragment_title">MOVIES</string>
    <string name="movie_details_fragment_title">Movie Details</string>
    <string name="add_new_movie_fragment_title">Add New Movie</string>
</resources>